tests/expression/list_type_faults.sy
start :: fn {
    a := [1, 2]
    push(a, "str")

    b : [str] = [1, "str"]

    // TODO(ed)
    c := [1, "str"]
    push(c, 0.1)
}

// error: $Mismatch { .. }
// error: $Mismatch { .. }
// error: $Mismatch { .. }
